--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,211 @@
 /* Add your CSS to this file */
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'NotoSans', sans-serif;
+    font-size: 18px;
+}
+
 body {
     margin: 0;
     font-size: 16px;
+    padding: 50px;
 }
 
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+}
+
+header{
+    align-content: left;
+    background-color: white;
+    font-size: 18px;
+}
+
+header h1{
+    float: left;
+}
+
+a:hover{
+    color: #5A67D8;
+    text-decoration: none;
+}
+
+a{
+    color: #6b7280;
+    text-decoration: none;
+}
+
+li{
+    display: inline;
+    text-align: center;
+    padding: 0px 8px;
+    list-style-type: none;
+}
+
+ul {
+    width: 10%;
+    margin:auto;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    display: flex;
+}
+
+.overview-hero .container{
+    background-color: #E2E8F0;
+    padding: 5%;
+    display: flex;
+    flex-direction: row;
+}
+
+.overview-hero-image img{
+    width: 250px;
+    float: left;
+    padding-right: 10px;
+    vertical-align: middle;
+}
+
+.overview-hero-text h2{
+    text-align: left;
+}
+
+
+.cards{
+    display: grid;
+    column-gap: 20px;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
+
+.learn-about h2{
+    font-size: 24px;
+    color: #48BB78;
+}
+
+.card{
+    text-align: left;
+    border-color: #E2E8F0;
+    border-radius: 5px;
+    border-style: solid;
+    box-shadow: 3px 3px #E2E8F0;
+}
+
+.card img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: auto;
+}
+
+.card h3{
+    padding: 5px 5px;
+    color: #48BB78;
+    font-size: 21px;
+}
+
+.card p{
+    padding: 5px;
+}
+
+.learn-about{
+    padding-top: 1%;
+}
+
+.testing{
+    background-color: #4A5568;
+    color: white;
+    margin-left: 12%;
+    margin-right: 12%;
+    padding: 25px;
+}
+
+.testing .container{
+    display: flex;
+}
+
+.testing-desciption h2{
+    text-align: left;
+}
+
+.testing-desciption p{
+    text-align: left;
+    padding-right: 40px;
+    
+}
+
+.testing-desciption{
+    flex: 1;
+}
+
+.cta{
+    padding-top: 50px;
+}
+
+.cta .btn{
+    background-color: #48BB78;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    flex: 1;
+    padding: 15px 32px;
+}
+
+.stories{
+    padding-top: 5%;
+}
+
+.stories img{
+    width: 100px;
+    float: left;
+    border-radius: 50%;
+}
+
+.article-body{
+    padding-left: 15%;
+    text-align: left;
+
+}
+
+.newsletter{
+    text-align: center;
+    background-color: #48BB78;
+    color: white;
+    padding: 1%;
+    margin-left: 12%;
+    margin-right: 12%;
+}
+
+.newsletter form{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.newsletter .btn{
+    border-radius: 5px;
+    background-color: #5A67D8;
+    border-style: none;
+    padding: 0px 32px;
+    color: white;
+}
+
+.newsletter .form-group{
+    padding: 10px 5px;
+}
+
+.newsletter input{
+    border-radius: 5px;
+    border-style: none;
+    padding: 15px 32px;
+}
+
+footer{
+    background-color: #4A5568;
+    color: white;
+    padding: 2%;
+    margin-left: 12%;
+    margin-right: 12%;
 }
