--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ ul {
     color: white;
     margin-left: 12%;
     margin-right: 12%;
-    padding: 25px;
+    padding: 50px;
 }
 
 .testing .container{
@@ -170,36 +170,45 @@ ul {
 }
 
 .newsletter{
-    text-align: center;
     background-color: #48BB78;
     color: white;
-    padding: 1%;
+    padding: 25px 0 25px 0;
     margin-left: 12%;
     margin-right: 12%;
 }
 
-.newsletter form{
+.newsletter h3{
+    text-align: center;
+}
+
+.newsletter .container{
+    width: 500px;
+}
+
+form{
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+input{
+    width: 90%;
+    height: auto;
+    border-radius: 5px;
+    border-style: none;
+    padding: 15px 3px;
 }
 
 .newsletter .btn{
     border-radius: 5px;
     background-color: #5A67D8;
     border-style: none;
-    padding: 0px 32px;
+    padding: 15px 32px;
     color: white;
 }
 
-.newsletter .form-group{
-    padding: 10px 5px;
-}
-
-.newsletter input{
-    border-radius: 5px;
-    border-style: none;
-    padding: 15px 32px;
+.message{
+    padding-top: 10px;
 }
 
 footer{
